# cool-agent

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  main.py
src/agents/: __init__.py
src/agents/llm/: __init__.py  base.py  factory.py  manager.py  registry.py
src/agents/llm/model_adapter/: __init__.py  deepseek_model.py  openai_compatible.py  openai_model.py  xf_spark_model.py
src/agents/memory/: __init__.py  context_desensitization.py  context_management.py  long_term_memory.py  short_term_memory.py
src/agents/models/: __init__.py  base.py  factory.py  registry.py
src/agents/models/model_adapter/: __init__.py  deepseek_model.py  openai_compatible.py  openai_model.py  xf_spark_model.py
src/agents/prompt/: __init__.py  file_cleanup.py  file_organizer.py  file_renamer.py  plan_and_execute.py  plan_and_execute_skills.py  react.py  react_skills.py
src/agents/service/: __init__.py  base_agent.py  file_agents.py  react_agent.py  test_model.py
src/agents/skills/batch-file-copy/: SKILL.md
src/agents/skills/batch-file-create/: SKILL.md
src/agents/skills/batch-file-delete/: SKILL.md
src/agents/skills/batch-file-move/: SKILL.md
src/agents/skills/batch-file-rename/: SKILL.md
src/agents/skills/batch-file-search/: SKILL.md
src/agents/skills/batch-text-replace/: SKILL.md
src/agents/tools/: __init__.py  base_tool.py  mcp_client.py  mcp_config.py  mcp_tool.py  registry.py
src/agents/tools/scripts/: batch_copy.py  batch_create.py  batch_delete.py  batch_move.py  batch_rename.py  batch_replace.py  batch_search.py
src/agents/workflows/: __init__.py  base_workflow.py  plan_and_execute_workflow.py
src/api/: run.py  server.py
src/api/routes/: main.py
src/api/v1/: __init__.py  chat_engine.py  chat_store.py
src/api/v1/routes/: chat.py  main.py
src/cli/: main.py
src/config/: __init__.py  settings.py
src/desktop/: main.py
src/desktop-tauri/: index.html  package-lock.json  package.json  vite.config.ts
src/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
src/memory/: __init__.py  base_memory.py  short_term_memory.py
src/models/: __init__.py  base.py  llm_client.py  manager.py
src/models/model_adapter/: openai_model.py  xf_spark_model.py
src/service/: test_model.py
src/tools/: base_tool.py  registry.py
src/utils/: __init__.py  helpers.py  tool_utils.py
src/workflows/: __init__.py  base_workflow.py
tests/: __init__.py  conftest.py  test_api_v1_routes.py  test_basic_agent.py  test_plan_and_execute_workflow.py
tests/agents/: test_file_agents.py
tests/api/: test_chat_api.py
tests/llm/: test_llm_resilience.py
tests/memory/: test_memory.py  test_memory_modules.py
tests/skills/: test_batch_file_copy_delete.py
