[tool.poetry]
name = "intelligent-agent-project"
version = "0.1.0"
description = "An intelligent AI agent framework built with Python"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
homepage = ""
repository = ""
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-dotenv = ">=1.0.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
openai = ">=1.0.0"
anthropic = ">=0.5.0"
fastapi = ">=0.100.0"
uvicorn = ">=0.23.0"
sqlalchemy = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
pre-commit = ">=3.0.0"
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
mypy = ">=1.0.0"
mkdocs = ">=1.5.0"
mkdocs-material = ">=9.0.0"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(\.
  |build
  |dist
  |venv
  |\.venv
  |tests
  |examples
  |docs
  |scripts
  |data
  |notebooks
)/
'''

[tool.isort]
profile = "black"
line_length = 88
extend_skip_glob = ["tests/**", "examples/**", "docs/**", "scripts/**", "data/**", "notebooks/**"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true
ignore_missing_imports = true
follow_imports = "silent"

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
testpaths = ["tests"]
addopts = ["-v", "--cov=src", "--cov-report=term-missing"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
